[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/game/battle/battle_world.gd" type="Script" id=1]
[ext_resource path="res://assets/gfx/game/0x72_16x16DungeonTileset.v4.png" type="Texture" id=2]
[ext_resource path="res://src/game/battle/player_base.tscn" type="PackedScene" id=3]

[sub_resource type="TileSet" id=1]
0/name = "0x72_16x16DungeonTileset.v4.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 96, 64, 48 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 256, Vector2( 0, 1 ), 260, Vector2( 0, 2 ), 4, Vector2( 1, 0 ), 320, Vector2( 1, 1 ), 325, Vector2( 1, 2 ), 5, Vector2( 2, 0 ), 320, Vector2( 2, 1 ), 321, Vector2( 2, 2 ), 5, Vector2( 3, 0 ), 64, Vector2( 3, 1 ), 65, Vector2( 3, 2 ), 1 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "wall"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 48, 32 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 16, 16 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "column"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 96, 48, 16, 48 )
2/tile_mode = 2
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 16, 16 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "clean_floor"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 32, 48, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[node name="BattleWorld" type="Node2D"]
script = ExtResource( 1 )
player_base_max_hp = 100.0

[node name="BG" type="Sprite" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="TileMap" type="TileMap" parent="BG"]
scale = Vector2( 2, 2 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1
tile_data = PoolIntArray( 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 2, 0, 458758, 1, 0, 458759, 1, 1, 458760, 1, 1, 458761, 1, 1, 458762, 1, 1, 458763, 2, 0, 458764, 1, 1, 458765, 1, 1, 458766, 1, 1, 458767, 1, 1, 458768, 1, 0, 458769, 2, 0, 458770, 1, 1, 458771, 1, 1, 458772, 1, 1, 458773, 1, 0, 458774, 1, 1, 458775, 2, 0, 458776, 1, 0, 458777, 1, 1, 458778, 1, 1, 458779, 1, 1, 458780, 1, 1, 458781, 1, 1, 458782, 1, 1, 458783, 1, 1, 458784, 1, 0, 458785, 1, 0, 458786, 1, 1, 458787, 1, 1, 524288, 1, 65536, 524289, 1, 65536, 524290, 1, 65536, 524291, 1, 65536, 524292, 1, 65536, 524293, 2, 65536, 524294, 1, 65536, 524295, 1, 65536, 524296, 1, 65536, 524297, 1, 65536, 524298, 1, 65536, 524299, 2, 65536, 524300, 1, 65536, 524301, 1, 65536, 524302, 1, 65536, 524303, 1, 65536, 524304, 1, 65536, 524305, 2, 65536, 524306, 1, 65536, 524307, 1, 65536, 524308, 1, 65536, 524309, 1, 65536, 524310, 1, 65536, 524311, 2, 65536, 524312, 1, 65536, 524313, 1, 65536, 524314, 1, 65536, 524315, 1, 65536, 524316, 1, 65536, 524317, 1, 65536, 524318, 1, 65536, 524319, 1, 65536, 524320, 1, 65536, 524321, 1, 65536, 524322, 1, 65537, 524323, 1, 65537, 589824, 1, 65536, 589825, 1, 65536, 589826, 1, 65536, 589827, 1, 65536, 589828, 1, 65536, 589829, 2, 65536, 589830, 1, 65536, 589831, 1, 65536, 589832, 1, 65536, 589833, 1, 65536, 589834, 1, 65536, 589835, 2, 65536, 589836, 1, 65536, 589837, 1, 65536, 589838, 1, 65536, 589839, 1, 65536, 589840, 1, 65536, 589841, 2, 65536, 589842, 1, 65536, 589843, 1, 65536, 589844, 1, 65536, 589845, 1, 65536, 589846, 1, 65536, 589847, 2, 65536, 589848, 1, 65536, 589849, 1, 65536, 589850, 1, 65536, 589851, 1, 65536, 589852, 1, 65536, 589853, 1, 65536, 589854, 1, 65536, 589855, 1, 65536, 589856, 1, 65536, 589857, 1, 65536, 589858, 1, 65536, 589859, 1, 65536, 655360, 0, 0, 655361, 0, 2, 655362, 0, 2, 655363, 0, 1, 655364, 0, 2, 655365, 0, 2, 655366, 0, 1, 655367, 0, 1, 655368, 0, 1, 655369, 0, 2, 655370, 0, 1, 655371, 2, 131072, 655372, 0, 2, 655373, 0, 1, 655374, 0, 1, 655375, 0, 2, 655376, 0, 1, 655377, 2, 131072, 655378, 0, 1, 655379, 0, 1, 655380, 0, 1, 655381, 0, 1, 655382, 0, 2, 655383, 2, 131072, 655384, 0, 2, 655385, 0, 2, 655386, 0, 2, 655387, 0, 1, 655388, 0, 2, 655389, 0, 2, 655390, 0, 1, 655391, 0, 1, 655392, 0, 1, 655393, 0, 1, 655394, 0, 1, 655395, 0, 3, 720896, 0, 65536, 720897, 0, 65537, 720898, 0, 65537, 720899, 0, 65537, 720900, 0, 65537, 720901, 0, 65537, 720902, 0, 65537, 720903, 0, 65537, 720904, 0, 65537, 720905, 0, 65537, 720906, 0, 65537, 720907, 0, 65537, 720908, 0, 65537, 720909, 0, 65537, 720910, 0, 65537, 720911, 0, 65537, 720912, 0, 65537, 720913, 0, 65537, 720914, 0, 65537, 720915, 0, 65537, 720916, 0, 65537, 720917, 0, 65537, 720918, 0, 65537, 720919, 0, 65537, 720920, 0, 65537, 720921, 0, 65537, 720922, 0, 65537, 720923, 0, 65537, 720924, 0, 65537, 720925, 0, 65537, 720926, 0, 65537, 720927, 0, 65537, 720928, 0, 65537, 720929, 0, 65537, 720930, 0, 65537, 720931, 0, 65539, 786432, 0, 65536, 786433, 0, 65537, 786434, 0, 65537, 786435, 0, 65537, 786436, 0, 65537, 786437, 0, 65537, 786438, 0, 65537, 786439, 0, 65537, 786440, 0, 65537, 786441, 0, 65537, 786442, 0, 65537, 786443, 0, 65537, 786444, 0, 65537, 786445, 0, 65537, 786446, 0, 65537, 786447, 0, 65537, 786448, 0, 65537, 786449, 0, 65537, 786450, 0, 65537, 786451, 0, 65537, 786452, 0, 65537, 786453, 0, 65537, 786454, 0, 65537, 786455, 0, 65537, 786456, 0, 65537, 786457, 0, 65537, 786458, 0, 65537, 786459, 0, 65537, 786460, 0, 65537, 786461, 0, 65537, 786462, 0, 65537, 786463, 0, 65537, 786464, 0, 65537, 786465, 0, 65537, 786466, 0, 65537, 786467, 0, 65539, 851968, 0, 131072, 851969, 0, 131074, 851970, 0, 131074, 851971, 0, 131074, 851972, 0, 131073, 851973, 0, 131074, 851974, 0, 131073, 851975, 0, 131074, 851976, 0, 131074, 851977, 0, 131073, 851978, 0, 131074, 851979, 0, 131073, 851980, 0, 131074, 851981, 0, 131074, 851982, 0, 131074, 851983, 0, 131074, 851984, 0, 131073, 851985, 0, 131073, 851986, 0, 131074, 851987, 0, 131073, 851988, 0, 131074, 851989, 0, 131074, 851990, 0, 131073, 851991, 0, 131073, 851992, 0, 131073, 851993, 0, 131073, 851994, 0, 131073, 851995, 0, 131073, 851996, 0, 131073, 851997, 0, 131073, 851998, 0, 131073, 851999, 0, 131073, 852000, 0, 131074, 852001, 0, 131074, 852002, 0, 131073, 852003, 0, 131075, 917504, 3, 0, 917505, 3, 0, 917506, 3, 0, 917507, 3, 0, 917508, 3, 0, 917509, 3, 0, 917510, 3, 0, 917511, 3, 0, 917512, 3, 0, 917513, 3, 0, 917514, 3, 0, 917515, 3, 0, 917516, 3, 0, 917517, 3, 0, 917518, 3, 0, 917519, 3, 0, 917520, 3, 0, 917521, 3, 0, 917522, 3, 0, 917523, 3, 0, 917524, 3, 0, 917525, 3, 0, 917526, 3, 0, 917527, 3, 0, 917528, 3, 0, 917529, 3, 0, 917530, 3, 0, 917531, 3, 0, 917532, 3, 0, 917533, 3, 0, 917534, 3, 0, 917535, 3, 0, 917536, 3, 0, 917537, 3, 0, 917538, 3, 0, 917539, 3, 0, 983040, 0, 0, 983041, 0, 1, 983042, 0, 1, 983043, 0, 2, 983044, 0, 1, 983045, 0, 2, 983046, 0, 1, 983047, 0, 2, 983048, 0, 1, 983049, 0, 2, 983050, 0, 1, 983051, 0, 1, 983052, 0, 2, 983053, 0, 1, 983054, 0, 2, 983055, 0, 2, 983056, 0, 1, 983057, 0, 2, 983058, 0, 1, 983059, 0, 2, 983060, 0, 2, 983061, 0, 2, 983062, 0, 1, 983063, 0, 2, 983064, 0, 2, 983065, 0, 2, 983066, 0, 1, 983067, 0, 2, 983068, 0, 2, 983069, 0, 1, 983070, 0, 1, 983071, 0, 2, 983072, 0, 1, 983073, 0, 1, 983074, 0, 2, 983075, 0, 3, 1048576, 0, 65536, 1048577, 0, 65537, 1048578, 0, 65537, 1048579, 0, 65537, 1048580, 0, 65537, 1048581, 0, 65537, 1048582, 0, 65537, 1048583, 0, 65537, 1048584, 0, 65537, 1048585, 0, 65537, 1048586, 0, 65537, 1048587, 0, 65537, 1048588, 0, 65537, 1048589, 0, 65537, 1048590, 0, 65537, 1048591, 0, 65537, 1048592, 0, 65537, 1048593, 0, 65537, 1048594, 0, 65537, 1048595, 0, 65537, 1048596, 0, 65537, 1048597, 0, 65537, 1048598, 0, 65537, 1048599, 0, 65537, 1048600, 0, 65537, 1048601, 0, 65537, 1048602, 0, 65537, 1048603, 0, 65537, 1048604, 0, 65537, 1048605, 0, 65537, 1048606, 0, 65537, 1048607, 0, 65537, 1048608, 0, 65537, 1048609, 0, 65537, 1048610, 0, 65537, 1048611, 0, 65539, 1114112, 0, 65536, 1114113, 0, 65537, 1114114, 0, 65537, 1114115, 0, 65537, 1114116, 0, 65537, 1114117, 0, 65537, 1114118, 0, 65537, 1114119, 0, 65537, 1114120, 0, 65537, 1114121, 0, 65537, 1114122, 0, 65537, 1114123, 0, 65537, 1114124, 0, 65537, 1114125, 0, 65537, 1114126, 0, 65537, 1114127, 0, 65537, 1114128, 0, 65537, 1114129, 0, 65537, 1114130, 0, 65537, 1114131, 0, 65537, 1114132, 0, 65537, 1114133, 0, 65537, 1114134, 0, 65537, 1114135, 0, 65537, 1114136, 0, 65537, 1114137, 0, 65537, 1114138, 0, 65537, 1114139, 0, 65537, 1114140, 0, 65537, 1114141, 0, 65537, 1114142, 0, 65537, 1114143, 0, 65537, 1114144, 0, 65537, 1114145, 0, 65537, 1114146, 0, 65537, 1114147, 0, 65539, 1179648, 0, 131072, 1179649, 0, 131074, 1179650, 0, 131073, 1179651, 0, 131073, 1179652, 0, 131073, 1179653, 0, 131074, 1179654, 0, 131074, 1179655, 0, 131074, 1179656, 0, 131073, 1179657, 0, 131073, 1179658, 0, 131074, 1179659, 0, 131073, 1179660, 0, 131073, 1179661, 0, 131074, 1179662, 0, 131074, 1179663, 0, 131074, 1179664, 0, 131073, 1179665, 0, 131074, 1179666, 0, 131073, 1179667, 0, 131074, 1179668, 0, 131074, 1179669, 0, 131074, 1179670, 0, 131073, 1179671, 0, 131073, 1179672, 0, 131074, 1179673, 0, 131074, 1179674, 0, 131073, 1179675, 0, 131074, 1179676, 0, 131074, 1179677, 0, 131074, 1179678, 0, 131073, 1179679, 0, 131074, 1179680, 0, 131074, 1179681, 0, 131073, 1179682, 0, 131073, 1179683, 0, 131075, 1245184, 3, 0, 1245185, 3, 0, 1245186, 3, 0, 1245187, 3, 0, 1245188, 3, 0, 1245189, 3, 0, 1245190, 3, 0, 1245191, 3, 0, 1245192, 3, 0, 1245193, 3, 0, 1245194, 3, 0, 1245195, 3, 0, 1245196, 3, 0, 1245197, 3, 0, 1245198, 3, 0, 1245199, 3, 0, 1245200, 3, 0, 1245201, 3, 0, 1245202, 3, 0, 1245203, 3, 0, 1245204, 3, 0, 1245205, 3, 0, 1245206, 3, 0, 1245207, 3, 0, 1245208, 3, 0, 1245209, 3, 0, 1245210, 3, 0, 1245211, 3, 0, 1245212, 3, 0, 1245213, 3, 0, 1245214, 3, 0, 1245215, 3, 0, 1245216, 3, 0, 1245217, 3, 0, 1245218, 3, 0, 1245219, 3, 0, 1310720, 0, 0, 1310721, 0, 1, 1310722, 0, 1, 1310723, 0, 2, 1310724, 0, 1, 1310725, 0, 2, 1310726, 0, 1, 1310727, 0, 1, 1310728, 0, 2, 1310729, 0, 2, 1310730, 0, 2, 1310731, 0, 1, 1310732, 0, 2, 1310733, 0, 1, 1310734, 0, 1, 1310735, 0, 2, 1310736, 0, 1, 1310737, 0, 1, 1310738, 0, 2, 1310739, 0, 2, 1310740, 0, 1, 1310741, 0, 1, 1310742, 0, 1, 1310743, 0, 1, 1310744, 0, 1, 1310745, 0, 2, 1310746, 0, 1, 1310747, 0, 2, 1310748, 0, 2, 1310749, 0, 2, 1310750, 0, 2, 1310751, 0, 2, 1310752, 0, 1, 1310753, 0, 2, 1310754, 0, 2, 1310755, 0, 3, 1376256, 0, 65536, 1376257, 0, 65537, 1376258, 0, 65537, 1376259, 0, 65537, 1376260, 0, 65537, 1376261, 0, 65537, 1376262, 0, 65537, 1376263, 0, 65537, 1376264, 0, 65537, 1376265, 0, 65537, 1376266, 0, 65537, 1376267, 0, 65537, 1376268, 0, 65537, 1376269, 0, 65537, 1376270, 0, 65537, 1376271, 0, 65537, 1376272, 0, 65537, 1376273, 0, 65537, 1376274, 0, 65537, 1376275, 0, 65537, 1376276, 0, 65537, 1376277, 0, 65537, 1376278, 0, 65537, 1376279, 0, 65537, 1376280, 0, 65537, 1376281, 0, 65537, 1376282, 0, 65537, 1376283, 0, 65537, 1376284, 0, 65537, 1376285, 0, 65537, 1376286, 0, 65537, 1376287, 0, 65537, 1376288, 0, 65537, 1376289, 0, 65537, 1376290, 0, 65537, 1376291, 0, 65539, 1441792, 0, 65536, 1441793, 0, 65537, 1441794, 0, 65537, 1441795, 0, 65537, 1441796, 0, 65537, 1441797, 0, 65537, 1441798, 0, 65537, 1441799, 0, 65537, 1441800, 0, 65537, 1441801, 0, 65537, 1441802, 0, 65537, 1441803, 0, 65537, 1441804, 0, 65537, 1441805, 0, 65537, 1441806, 0, 65537, 1441807, 0, 65537, 1441808, 0, 65537, 1441809, 0, 65537, 1441810, 0, 65537, 1441811, 0, 65537, 1441812, 0, 65537, 1441813, 0, 65537, 1441814, 0, 65537, 1441815, 0, 65537, 1441816, 0, 65537, 1441817, 0, 65537, 1441818, 0, 65537, 1441819, 0, 65537, 1441820, 0, 65537, 1441821, 0, 65537, 1441822, 0, 65537, 1441823, 0, 65537, 1441824, 0, 65537, 1441825, 0, 65537, 1441826, 0, 65537, 1441827, 0, 65539, 1507328, 0, 131072, 1507329, 0, 131073, 1507330, 0, 131074, 1507331, 0, 131073, 1507332, 0, 131073, 1507333, 0, 131073, 1507334, 0, 131073, 1507335, 0, 131073, 1507336, 0, 131073, 1507337, 0, 131073, 1507338, 0, 131074, 1507339, 0, 131074, 1507340, 0, 131073, 1507341, 0, 131074, 1507342, 0, 131074, 1507343, 0, 131074, 1507344, 0, 131073, 1507345, 0, 131073, 1507346, 0, 131073, 1507347, 0, 131074, 1507348, 0, 131073, 1507349, 0, 131074, 1507350, 0, 131074, 1507351, 0, 131074, 1507352, 0, 131073, 1507353, 0, 131073, 1507354, 0, 131074, 1507355, 0, 131074, 1507356, 0, 131074, 1507357, 0, 131073, 1507358, 0, 131074, 1507359, 0, 131073, 1507360, 0, 131074, 1507361, 0, 131074, 1507362, 0, 131073, 1507363, 0, 131075 )

[node name="SpawnPositions" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Position2D" type="Position2D" parent="SpawnPositions"]
position = Vector2( 872, 380 )
__meta__ = {
"_gizmo_extents_": 20.0
}

[node name="Position2D2" type="Position2D" parent="SpawnPositions"]
position = Vector2( 872, 541 )
__meta__ = {
"_gizmo_extents_": 20.0
}

[node name="Position2D3" type="Position2D" parent="SpawnPositions"]
position = Vector2( 872, 701 )
__meta__ = {
"_gizmo_extents_": 20.0
}

[node name="PlayerBase" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Base" parent="PlayerBase" instance=ExtResource( 3 )]
position = Vector2( 59, 380 )

[node name="Base2" parent="PlayerBase" instance=ExtResource( 3 )]
position = Vector2( 59, 541 )

[node name="Base3" parent="PlayerBase" instance=ExtResource( 3 )]
position = Vector2( 59, 699 )

[node name="Units" type="YSort" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
